public abstract class Employee {

    // ---------- Attributes ----------
    protected String status;
    protected String name;


    // ---------- Methods ----------
    abstract double calculateSalary();

    protected abstract String buildPaycheckDetails();

}


