@startuml

class Main

abstract Employee{
# String name
# String status

+ calculateSalary()
# String buildPaycheckDetails()
}

class MonthlyEmployee{
- double salary

+ calculateSalary()
# buildPaycheckDetails()
}

class HourlyEmployee{
- double numberOfHours
- double payPrHour

+ calculateSalary()
# buildPaycheckDetails()
}

class CommissionEmployee{
- double baseSalary
- double salesAmount
- double commissionPercentage

+ calculateSalary()
- calculateCommission()
- formatCommissionPercentage()
# buildPaycheckDetails()
}

Main *- Employee

Employee <|-- MonthlyEmployee : is
Employee <|-- HourlyEmployee : is
Employee <|-- CommissionEmployee : is

@enduml